--- a/tools/ua2json/CMakeLists.txt
+++ b/tools/ua2json/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-add_executable(ua2json ua2json.c)
+add_executable(ua2json EXCLUDE_FROM_ALL ua2json.c)
 target_link_libraries(ua2json open62541 ${open62541_LIBRARIES})
 assign_source_group(ua2json)
 add_dependencies(ua2json open62541-object)
