refactor(build): Correctly sort entries in examples/CMakeLists.txt

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -29,8 +29,6 @@ add_example(tutorial_server_variable tutorial_server_variable.c)
 
 add_example(tutorial_server_datasource tutorial_server_datasource.c)
 
-add_example(server_settimestamp server_settimestamp.c)
-
 if(UA_ENABLE_SUBSCRIPTIONS)
     add_example(tutorial_server_monitoreditems tutorial_server_monitoreditems.c)
 endif()
@@ -43,7 +41,7 @@ add_example(tutorial_server_reverseconnect tutorial_server_reverseconnect.c)
 
 if(UA_ENABLE_METHODCALLS)
     add_example(tutorial_server_method tutorial_server_method.c)
-    if (UA_MULTITHREADING EQUAL 100)
+    if(UA_MULTITHREADING GREATER_EQUAL 100)
         add_example(tutorial_server_method_async tutorial_server_method_async.c)
     endif()
 endif()
@@ -53,58 +51,32 @@ add_example(tutorial_client_firststeps tutorial_client_firststeps.c)
 if(UA_ENABLE_SUBSCRIPTIONS_EVENTS)
   add_example(tutorial_client_events tutorial_client_events.c)
   add_example(tutorial_server_events tutorial_server_events.c)
-  add_example(server_events_random events/server_random_events.c)
-  add_example(client_event_filter events/client_eventfilter.c)
   if(UA_ENABLE_SUBSCRIPTIONS_ALARMS_CONDITIONS)
     add_example(tutorial_server_alarms_conditions tutorial_server_alarms_conditions.c)
   endif()
 endif()
 
-##################
-# Example Server #
-##################
-
-add_example(server_ctt server_ctt.c)
-
-install(PROGRAMS $<TARGET_FILE:server_ctt>
-        DESTINATION bin
-        RENAME ua_server_ctt.exe)
-
-##################
-# Example Client #
-##################
-
-add_example(client client.c)
-
-add_example(client_connect client_connect.c)
-
-if(UA_ENABLE_HISTORIZING)
-    add_example(client_historical client_historical.c)
-endif()
-
-install(PROGRAMS $<TARGET_FILE:client>
-        DESTINATION bin
-        RENAME ua_client)
-
-add_example(client_async client_async.c)
-
-if(UA_ENABLE_METHODCALLS)
-    if (UA_MULTITHREADING EQUAL 100)
-        add_example(client_method_async client_method_async.c)
+if(UA_ENABLE_PUBSUB)
+    add_example(tutorial_pubsub_connection pubsub/tutorial_pubsub_connection.c)
+    add_example(tutorial_pubsub_publish pubsub/tutorial_pubsub_publish.c)
+    add_example(tutorial_pubsub_subscribe pubsub/tutorial_pubsub_subscribe.c)
+    add_example(tutorial_pubsub_publish_raw pubsub/tutorial_pubsub_publish_raw.c)
+    add_example(tutorial_pubsub_subscribe_raw pubsub/tutorial_pubsub_subscribe_raw.c)
+    if(UA_ENABLE_PUBSUB_MQTT AND NOT WIN32)
+        include_directories(${PROJECT_SOURCE_DIR}/../plugins)
+        add_example(tutorial_pubsub_mqtt_publish pubsub/tutorial_pubsub_mqtt_publish.c)
+        add_example(tutorial_pubsub_mqtt_subscribe pubsub/tutorial_pubsub_mqtt_subscribe.c)
     endif()
 endif()
 
-add_example(client_connect_loop client_connect_loop.c)
-
-add_example(client_connectivitycheck_loop client_connectivitycheck_loop.c)
-
-if(UA_ENABLE_SUBSCRIPTIONS)
-    add_example(client_subscription_loop client_subscription_loop.c)
+if(UA_ENABLE_HISTORIZING)
+    add_example(tutorial_server_historicaldata tutorial_server_historicaldata.c)
+    add_example(tutorial_server_historicaldata_circular tutorial_server_historicaldata_circular.c)
 endif()
 
-####################
-# Feature Examples #
-####################
+##################
+# Example Server #
+##################
 
 add_example(server_mainloop server_mainloop.c)
 
@@ -116,9 +88,44 @@ add_example(server_inheritance server_inheritance.c)
 
 add_example(server_loglevel server_loglevel.c)
 
+add_example(server_ctt server_ctt.c)
+
+add_example(server_settimestamp server_settimestamp.c)
+
+##################
+# Example Client #
+##################
+
+add_example(client client.c)
+
+add_example(client_connect client_connect.c)
+
+add_example(client_async client_async.c)
+
+add_example(client_connect_loop client_connect_loop.c)
+
+add_example(client_connectivitycheck_loop client_connectivitycheck_loop.c)
+
+####################
+# Feature Examples #
+####################
+
+if(UA_ENABLE_SUBSCRIPTIONS)
+    add_example(client_subscription_loop client_subscription_loop.c)
+    if(UA_ENABLE_SUBSCRIPTIONS_EVENTS)
+        add_example(server_events_random events/server_random_events.c)
+        add_example(client_event_filter events/client_eventfilter.c)
+    endif()
+endif()
+
+if(UA_ENABLE_METHODCALLS)
+    if(UA_MULTITHREADING EQUAL 100)
+        add_example(client_method_async client_method_async.c)
+    endif()
+endif()
+
 if(UA_ENABLE_HISTORIZING)
-    add_example(tutorial_server_historicaldata tutorial_server_historicaldata.c)
-    add_example(tutorial_server_historicaldata_circular tutorial_server_historicaldata_circular.c)
+    add_example(client_historical client_historical.c)
 endif()
 
 if(UA_ENABLE_ENCRYPTION OR UA_ENABLE_ENCRYPTION STREQUAL "MBEDTLS" OR UA_ENABLE_ENCRYPTION STREQUAL "OPENSSL")
@@ -134,7 +141,7 @@ if(UA_ENABLE_ENCRYPTION OR UA_ENABLE_ENCRYPTION STREQUAL "MBEDTLS" OR UA_ENABLE_
     endif()
 endif()
 
-if (NOT (BUILD_SHARED_LIBS AND WIN32))
+if(NOT (BUILD_SHARED_LIBS AND WIN32))
     add_example(custom_datatype_client custom_datatype/client_types_custom.c)
     add_example(custom_datatype_server custom_datatype/server_types_custom.c)
 else()
@@ -146,7 +153,7 @@ if(UA_ENABLE_NODEMANAGEMENT)
     add_example(access_control_server access_control/server_access_control.c)
     add_example(access_control_client access_control/client_access_control.c)
     if(UA_ENABLE_ENCRYPTION OR UA_ENABLE_ENCRYPTION STREQUAL "MBEDTLS" OR UA_ENABLE_ENCRYPTION STREQUAL "OPENSSL")
-    add_example(access_control_client_encrypt access_control_encrypt/client_access_control_encrypt.c)
+        add_example(access_control_client_encrypt access_control_encrypt/client_access_control_encrypt.c)
     endif()
 endif()
 
@@ -157,17 +164,12 @@ if(UA_ENABLE_DISCOVERY_MULTICAST)
     add_example(discovery_server_multicast discovery/server_multicast.c)
 endif()
 
-add_subdirectory(nodeset)
 ####################
 #  Example PubSub  #
 ####################
 
 if(UA_ENABLE_PUBSUB)
-    add_example(tutorial_pubsub_connection pubsub/tutorial_pubsub_connection.c)
-    add_example(tutorial_pubsub_publish pubsub/tutorial_pubsub_publish.c)
     add_example(server_pubsub_publish_on_demand pubsub/server_pubsub_publisher_on_demand.c)
-    add_example(tutorial_pubsub_publish_raw pubsub/tutorial_pubsub_publish_raw.c)
-    add_example(tutorial_pubsub_subscribe_raw pubsub/tutorial_pubsub_subscribe_raw.c)
     add_example(server_pubsub_publisher_iop pubsub/server_pubsub_publisher_iop.c)
     add_example(server_pubsub_publish_rt_level pubsub/server_pubsub_publisher_rt_level.c)
     add_example(server_pubsub_publish_rt_level_raw pubsub/server_pubsub_publisher_rt_level_raw.c)
@@ -180,8 +182,7 @@ if(UA_ENABLE_PUBSUB)
         endif()
     endif()
     add_example(server_pubsub_subscribe_rt_level pubsub/server_pubsub_subscriber_rt_level.c)
-    add_example(tutorial_pubsub_subscribe pubsub/tutorial_pubsub_subscribe.c)
-    if (BUILD_SHARED_LIBS)
+    if(BUILD_SHARED_LIBS)
         message(WARNING "Build option BUILD_SHARED_LIBS not supported for standalone subscriber and realtime examples. Skipping these examples.")
     else (NOT BUILD_SHARED_LIBS)
         add_example(pubsub_subscribe_standalone pubsub/pubsub_subscribe_standalone.c)
@@ -217,18 +218,10 @@ if(UA_ENABLE_PUBSUB)
         endif()
     endif()
 
-
-    if(UA_ENABLE_PUBSUB_MQTT)
-        if(NOT WIN32)
-            include_directories(${PROJECT_SOURCE_DIR}/../plugins)
-            add_example(tutorial_pubsub_mqtt_publish pubsub/tutorial_pubsub_mqtt_publish.c)
-            add_example(tutorial_pubsub_mqtt_subscribe pubsub/tutorial_pubsub_mqtt_subscribe.c)
-        endif()
-    endif()
     if(UA_ENABLE_PUBSUB_FILE_CONFIG)
         add_example(server_pubsub_file_configuration pubsub/server_pubsub_file_configuration.c)
     endif()
-    if (UA_ENABLE_PUBSUB_MONITORING)
+    if(UA_ENABLE_PUBSUB_MONITORING)
         if(CMAKE_SYSTEM MATCHES "Linux")
             add_example(server_pubsub_subscribe_custom_monitoring pubsub/monitoring/server_pubsub_subscribe_custom_monitoring.c)
         else(NOT (CMAKE_SYSTEM MATCHES "Linux"))
@@ -237,9 +230,12 @@ if(UA_ENABLE_PUBSUB)
     endif()
 endif()
 
-###########################
-# Nodeser Loader Examples #
-###########################
+####################
+# Nodeset Examples #
+####################
+
+add_subdirectory(nodeset)
+
 if(UA_ENABLE_NODESETLOADER)
     if(UA_NAMESPACE_ZERO STREQUAL "FULL")
         add_example(nodeset_loader nodeset_loader/nodeset_loader.c)
