refactor(server): Make Discovery a freestanding ServerComponent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1148,7 +1148,7 @@ if(UA_ENABLE_HISTORIZING)
 endif()
 
 if(UA_ENABLE_DISCOVERY)
-    list(INSERT internal_headers 13 ${PROJECT_SOURCE_DIR}/src/server/ua_discovery_manager.h)
+    list(APPEND internal_headers ${PROJECT_SOURCE_DIR}/src/server/ua_discovery_manager.h)
     list(APPEND lib_sources ${PROJECT_SOURCE_DIR}/src/server/ua_discovery_manager.c)
 endif()
 
