Add test for activateSessionAsyn.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -405,6 +405,7 @@ ua_add_test(server/check_server_reverseconnect.c)
 ua_add_test(client/check_client.c)
 ua_add_test(client/check_activateSession.c)
 ua_add_test(client/check_subscriptionWithactivateSession.c)
+ua_add_test(client/check_activateSessionAsync.c)
 ua_add_test(client/check_client_securechannel.c)
 ua_add_test(client/check_client_async.c)
 ua_add_test(client/check_client_async_connect.c)
