--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -404,7 +404,9 @@ ua_add_test(server/check_server_reverseconnect.c)
 
 ua_add_test(client/check_client.c)
 ua_add_test(client/check_activateSession.c)
-ua_add_test(client/check_subscriptionWithactivateSession.c)
+if(UA_ENABLE_SUBSCRIPTIONS)
+    ua_add_test(client/check_subscriptionWithactivateSession.c)
+endif()
 ua_add_test(client/check_activateSessionAsync.c)
 ua_add_test(client/check_client_securechannel.c)
 ua_add_test(client/check_client_async.c)
