--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -408,6 +408,11 @@ ua_add_test(server/check_server_reverseconnect.c)
 # Test Client
 
 ua_add_test(client/check_client.c)
+ua_add_test(client/check_activateSession.c)
+if(UA_ENABLE_SUBSCRIPTIONS)
+    ua_add_test(client/check_subscriptionWithactivateSession.c)
+endif()
+ua_add_test(client/check_activateSessionAsync.c)
 ua_add_test(client/check_client_securechannel.c)
 ua_add_test(client/check_client_async.c)
 ua_add_test(client/check_client_async_connect.c)
