--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -456,6 +456,9 @@ if(UA_ENABLE_PUBSUB_BUFMALLOC)
     endif()
 endif()
 
+option(UA_ENABLE_MQTT "Enable MQTT connections for the EventLoop" OFF)
+mark_as_advanced(UA_ENABLE_MQTT)
+
 option(UA_ENABLE_PUBSUB_MQTT "Enable publish/subscribe with mqtt (experimental)" OFF)
 mark_as_advanced(UA_ENABLE_PUBSUB_MQTT)
 if(UA_ENABLE_PUBSUB_MQTT)
@@ -464,6 +467,7 @@ if(UA_ENABLE_PUBSUB_MQTT)
         message(FATAL_ERROR "Amalgamation cannot be generated with MQTT enabled")
     endif()
 
+    include_directories("${open62541_MQTT_DIR}/include")
     if(NOT UA_FILE_MQTT)
         set(UA_FILE_MQTT ${open62541_MQTT_DIR}/src/mqtt.c)
     endif()
@@ -1139,6 +1143,11 @@ endif()
 if(UA_ENABLE_DISCOVERY)
     list(APPEND internal_headers ${PROJECT_SOURCE_DIR}/src/server/ua_discovery_manager.h)
     list(APPEND lib_sources ${PROJECT_SOURCE_DIR}/src/server/ua_discovery_manager.c)
+endif()
+
+if(UA_ENABLE_MQTT)
+    include_directories("${open62541_MQTT_DIR}/include")
+    list(APPEND lib_sources ${PROJECT_SOURCE_DIR}/arch/eventloop_mqtt.c)
 endif()
 
 if(UA_ENABLE_PUBSUB)
